[gd_scene load_steps=31 format=2]

[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://global/PauseWindow/BackPack/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://global/ItemAccess/ItemInBackpack.gd" type="Script" id=3]
[ext_resource path="res://art/temp/ItemAccessBG.png" type="Texture" id=4]
[ext_resource path="res://art/temp/ItemAccessTypeButton1.png" type="Texture" id=5]
[ext_resource path="res://art/temp/ItemAccessTypeButton5.png" type="Texture" id=6]
[ext_resource path="res://art/temp/ItemAccessTypeButton6.png" type="Texture" id=7]
[ext_resource path="res://art/temp/ItemAccessTypeButton2.png" type="Texture" id=8]
[ext_resource path="res://art/temp/ItemAccessTypeButton3.png" type="Texture" id=9]
[ext_resource path="res://art/temp/ItemAccessTypeButton4.png" type="Texture" id=10]
[ext_resource path="res://art/temp/ItemAccessDetailBG.png" type="Texture" id=11]
[ext_resource path="res://art/temp/PauseWindow/item_selected.png" type="Texture" id=12]
[ext_resource path="res://art/temp/PauseWindow/item_touched.png" type="Texture" id=13]
[ext_resource path="res://art/temp/PauseWindow/scroll_bg.png" type="Texture" id=14]
[ext_resource path="res://art/temp/PauseWindow/scroll_bar.png" type="Texture" id=15]
[ext_resource path="res://global/ItemAccess/ItemAccess.gd" type="Script" id=16]
[ext_resource path="res://global/PauseWindow/BackPack/DropItemWindow.tscn" type="PackedScene" id=17]
[ext_resource path="res://art/temp/PutIntoHome.png" type="Texture" id=18]
[ext_resource path="res://art/temp/Drop.png" type="Texture" id=19]
[ext_resource path="res://art/temp/PauseWindow/DropWeaponWindow.png" type="Texture" id=20]
[ext_resource path="res://art/temp/PutIntoHomeNumber.png" type="Texture" id=21]
[ext_resource path="res://global/ItemAccess/ItemInHome.gd" type="Script" id=22]
[ext_resource path="res://art/temp/PutIntoBackpack.png" type="Texture" id=23]
[ext_resource path="res://art/temp/PutIntoBackpackNumber.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 1 )

[node name="ItemAccess" type="Node2D"]
script = ExtResource( 16 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
offset = Vector2( 640, 360 )

[node name="ItemInBackpack" type="Node2D" parent="."]
position = Vector2( 140, 130 )
script = ExtResource( 3 )

[node name="InventoryFocused" type="Sprite" parent="ItemInBackpack"]
position = Vector2( 70, 80 )
scale = Vector2( 1.22, 1.18 )
texture = ExtResource( 13 )

[node name="InventoryChosen" type="Sprite" parent="ItemInBackpack"]
position = Vector2( 180, 80 )
scale = Vector2( 1.22, 1.18 )
texture = ExtResource( 12 )

[node name="InventoryList" type="Node2D" parent="ItemInBackpack"]

[node name="Inventory1" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 70, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory2" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 180, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory3" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 290, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory4" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 400, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory5" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 70, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory6" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 180, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory7" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 290, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory8" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 400, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory9" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 70, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory10" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 180, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory11" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 290, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory12" parent="ItemInBackpack/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 400, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="ScrollBar" type="Node2D" parent="ItemInBackpack"]
position = Vector2( 470, 190 )
scale = Vector2( 1, 1.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="ItemInBackpack/ScrollBar"]
texture = ExtResource( 14 )

[node name="Bar" type="Sprite" parent="ItemInBackpack/ScrollBar"]
position = Vector2( -4.5, -122 )
texture = ExtResource( 15 )
centered = false

[node name="ItemDetail" type="Node2D" parent="ItemInBackpack"]

[node name="Background" type="Sprite" parent="ItemInBackpack/ItemDetail"]
position = Vector2( 250, 435 )
texture = ExtResource( 11 )

[node name="ItemName" type="Label" parent="ItemInBackpack/ItemDetail"]
margin_left = 40.0
margin_top = 370.0
margin_right = 239.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
text = "测试物品"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemType" type="Label" parent="ItemInBackpack/ItemDetail"]
margin_left = 240.0
margin_top = 370.0
margin_right = 469.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
text = "物品类型"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="ItemInBackpack/ItemDetail"]
margin_left = 40.0
margin_top = 400.0
margin_right = 455.0
margin_bottom = 469.0
custom_fonts/font = SubResource( 2 )
text = "物品描述
12313
114414"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="ItemInBackpack/ItemDetail"]
position = Vector2( 230, 470 )

[node name="Drop" type="TextureButton" parent="ItemInBackpack/ItemDetail/Buttons"]
margin_right = 100.0
margin_bottom = 30.0
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveToHome" type="TextureButton" parent="ItemInBackpack/ItemDetail/Buttons"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 30.0
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropItemWindow" parent="ItemInBackpack/ItemDetail" instance=ExtResource( 17 )]
visible = false
position = Vector2( 500, 230 )
z_index = 15

[node name="LineEdit" parent="ItemInBackpack/ItemDetail/DropItemWindow" index="1"]
custom_fonts/font = SubResource( 3 )

[node name="Timer2" type="Timer" parent="ItemInBackpack/ItemDetail/DropItemWindow/LineEdit" index="0"]
wait_time = 0.65

[node name="PopupMenu2" type="PopupMenu" parent="ItemInBackpack/ItemDetail/DropItemWindow/LineEdit" index="1"]
items = [ "剪切", null, 0, false, false, 0, 268435544, null, "", false, "复制", null, 0, false, false, 1, 268435523, null, "", false, "粘贴", null, 0, false, false, 2, 268435542, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "全选", null, 0, false, false, 4, 268435521, null, "", false, "清除", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "撤销", null, 0, false, false, 5, 268435546, null, "", false, "重做", null, 0, false, false, 6, 301989978, null, "", false ]

[node name="Timer3" type="Timer" parent="ItemInBackpack/ItemDetail/DropItemWindow/LineEdit" index="2"]
wait_time = 0.65

[node name="PopupMenu3" type="PopupMenu" parent="ItemInBackpack/ItemDetail/DropItemWindow/LineEdit" index="3"]
items = [ "剪切", null, 0, false, false, 0, 268435544, null, "", false, "复制", null, 0, false, false, 1, 268435523, null, "", false, "粘贴", null, 0, false, false, 2, 268435542, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "全选", null, 0, false, false, 4, 268435521, null, "", false, "清除", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "撤销", null, 0, false, false, 5, 268435546, null, "", false, "重做", null, 0, false, false, 6, 301989978, null, "", false ]

[node name="OKbutton" parent="ItemInBackpack/ItemDetail/DropItemWindow" index="2"]
custom_fonts/font = SubResource( 4 )

[node name="QuitButton" parent="ItemInBackpack/ItemDetail/DropItemWindow" index="3"]
custom_fonts/font = SubResource( 4 )

[node name="DropWeaponWindow" type="Node2D" parent="ItemInBackpack/ItemDetail"]
visible = false
position = Vector2( 500, 230 )
z_index = 20

[node name="Background" type="Sprite" parent="ItemInBackpack/ItemDetail/DropWeaponWindow"]
texture = ExtResource( 20 )

[node name="OKbutton" type="Button" parent="ItemInBackpack/ItemDetail/DropWeaponWindow"]
margin_left = -180.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "确定"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="ItemInBackpack/ItemDetail/DropWeaponWindow"]
margin_left = 30.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "取消"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccessItemWindow" parent="ItemInBackpack/ItemDetail" instance=ExtResource( 17 )]
visible = false
position = Vector2( 500, 230 )
z_index = 15

[node name="Background" parent="ItemInBackpack/ItemDetail/AccessItemWindow" index="0"]
texture = ExtResource( 21 )

[node name="LineEdit" parent="ItemInBackpack/ItemDetail/AccessItemWindow" index="1"]
custom_fonts/font = SubResource( 3 )

[node name="Timer2" type="Timer" parent="ItemInBackpack/ItemDetail/AccessItemWindow/LineEdit" index="0"]
wait_time = 0.65

[node name="PopupMenu2" type="PopupMenu" parent="ItemInBackpack/ItemDetail/AccessItemWindow/LineEdit" index="1"]
items = [ "剪切", null, 0, false, false, 0, 268435544, null, "", false, "复制", null, 0, false, false, 1, 268435523, null, "", false, "粘贴", null, 0, false, false, 2, 268435542, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "全选", null, 0, false, false, 4, 268435521, null, "", false, "清除", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "撤销", null, 0, false, false, 5, 268435546, null, "", false, "重做", null, 0, false, false, 6, 301989978, null, "", false ]

[node name="Timer3" type="Timer" parent="ItemInBackpack/ItemDetail/AccessItemWindow/LineEdit" index="2"]
wait_time = 0.65

[node name="PopupMenu3" type="PopupMenu" parent="ItemInBackpack/ItemDetail/AccessItemWindow/LineEdit" index="3"]
items = [ "剪切", null, 0, false, false, 0, 268435544, null, "", false, "复制", null, 0, false, false, 1, 268435523, null, "", false, "粘贴", null, 0, false, false, 2, 268435542, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "全选", null, 0, false, false, 4, 268435521, null, "", false, "清除", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "撤销", null, 0, false, false, 5, 268435546, null, "", false, "重做", null, 0, false, false, 6, 301989978, null, "", false ]

[node name="OKbutton" parent="ItemInBackpack/ItemDetail/AccessItemWindow" index="2"]
custom_fonts/font = SubResource( 4 )

[node name="QuitButton" parent="ItemInBackpack/ItemDetail/AccessItemWindow" index="3"]
custom_fonts/font = SubResource( 4 )

[node name="Buttons" type="Node2D" parent="ItemInBackpack"]

[node name="All" type="TextureButton" parent="ItemInBackpack/Buttons"]
margin_left = 285.0
margin_top = -45.9439
margin_right = 345.0
margin_bottom = -15.9439
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="TextureButton" parent="ItemInBackpack/Buttons"]
margin_left = 345.0
margin_top = -45.0
margin_right = 405.0
margin_bottom = -15.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medicine" type="TextureButton" parent="ItemInBackpack/Buttons"]
margin_left = 405.0
margin_top = -45.0
margin_right = 465.0
margin_bottom = -15.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet" type="TextureButton" parent="ItemInBackpack/Buttons"]
margin_left = 285.0
margin_top = -15.9439
margin_right = 345.0
margin_bottom = 14.0561
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="TextureButton" parent="ItemInBackpack/Buttons"]
margin_left = 345.0
margin_top = -15.9439
margin_right = 405.0
margin_bottom = 14.0561
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Other" type="TextureButton" parent="ItemInBackpack/Buttons"]
margin_left = 405.0
margin_top = -15.0
margin_right = 465.0
margin_bottom = 15.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadValue" type="Label" parent="ItemInBackpack"]
margin_left = 20.0
margin_top = 8.0
margin_right = 220.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "负重值：10/100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemInHome" type="Node2D" parent="."]
position = Vector2( 640, 130 )
script = ExtResource( 22 )

[node name="InventoryFocused" type="Sprite" parent="ItemInHome"]
position = Vector2( 70, 80 )
scale = Vector2( 1.22, 1.18 )
texture = ExtResource( 13 )

[node name="InventoryChosen" type="Sprite" parent="ItemInHome"]
position = Vector2( 180, 80 )
scale = Vector2( 1.22, 1.18 )
texture = ExtResource( 12 )

[node name="InventoryList" type="Node2D" parent="ItemInHome"]

[node name="Inventory1" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 70, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory2" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 180, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory3" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 290, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory4" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 400, 80 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory5" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 70, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory6" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 180, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory7" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 290, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory8" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 400, 190 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory9" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 70, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory10" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 180, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory11" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 290, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="Inventory12" parent="ItemInHome/InventoryList" instance=ExtResource( 2 )]
position = Vector2( 400, 300 )
scale = Vector2( 0.9, 0.9 )

[node name="ScrollBar" type="Node2D" parent="ItemInHome"]
position = Vector2( 470, 190 )
scale = Vector2( 1, 1.25 )
__meta__ = {
"_edit_group_": true
}

[node name="Background" type="Sprite" parent="ItemInHome/ScrollBar"]
texture = ExtResource( 14 )

[node name="Bar" type="Sprite" parent="ItemInHome/ScrollBar"]
position = Vector2( -4.5, -122 )
texture = ExtResource( 15 )
centered = false

[node name="ItemDetail" type="Node2D" parent="ItemInHome"]

[node name="Background" type="Sprite" parent="ItemInHome/ItemDetail"]
position = Vector2( 250, 435 )
texture = ExtResource( 11 )

[node name="ItemName" type="Label" parent="ItemInHome/ItemDetail"]
margin_left = 40.0
margin_top = 370.0
margin_right = 239.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
text = "测试物品"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemType" type="Label" parent="ItemInHome/ItemDetail"]
margin_left = 240.0
margin_top = 370.0
margin_right = 469.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 1 )
text = "物品类型"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDescription" type="Label" parent="ItemInHome/ItemDetail"]
margin_left = 40.0
margin_top = 400.0
margin_right = 455.0
margin_bottom = 469.0
custom_fonts/font = SubResource( 2 )
text = "物品描述
12313
114414"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="ItemInHome/ItemDetail"]
position = Vector2( 230, 470 )

[node name="Drop" type="TextureButton" parent="ItemInHome/ItemDetail/Buttons"]
margin_right = 100.0
margin_bottom = 30.0
texture_normal = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoveToBackpack" type="TextureButton" parent="ItemInHome/ItemDetail/Buttons"]
margin_left = 120.0
margin_right = 220.0
margin_bottom = 30.0
texture_normal = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropItemWindow" parent="ItemInHome/ItemDetail" instance=ExtResource( 17 )]
visible = false
position = Vector2( 0, 230 )
z_index = 15

[node name="DropWeaponWindow" type="Node2D" parent="ItemInHome/ItemDetail"]
visible = false
position = Vector2( 0, 230 )
z_index = 20

[node name="Background" type="Sprite" parent="ItemInHome/ItemDetail/DropWeaponWindow"]
texture = ExtResource( 20 )

[node name="OKbutton" type="Button" parent="ItemInHome/ItemDetail/DropWeaponWindow"]
margin_left = -180.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "确定"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="ItemInHome/ItemDetail/DropWeaponWindow"]
margin_left = 30.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 5 )
text = "取消"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccessItemWindow" parent="ItemInHome/ItemDetail" instance=ExtResource( 17 )]
visible = false
position = Vector2( 0, 230 )
z_index = 15

[node name="Background" parent="ItemInHome/ItemDetail/AccessItemWindow" index="0"]
texture = ExtResource( 24 )

[node name="Buttons" type="Node2D" parent="ItemInHome"]

[node name="All" type="TextureButton" parent="ItemInHome/Buttons"]
margin_left = 285.0
margin_top = -45.9439
margin_right = 345.0
margin_bottom = -15.9439
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="TextureButton" parent="ItemInHome/Buttons"]
margin_left = 345.0
margin_top = -45.0
margin_right = 405.0
margin_bottom = -15.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medicine" type="TextureButton" parent="ItemInHome/Buttons"]
margin_left = 405.0
margin_top = -45.0
margin_right = 465.0
margin_bottom = -15.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet" type="TextureButton" parent="ItemInHome/Buttons"]
margin_left = 285.0
margin_top = -15.9439
margin_right = 345.0
margin_bottom = 14.0561
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="TextureButton" parent="ItemInHome/Buttons"]
margin_left = 345.0
margin_top = -15.9439
margin_right = 405.0
margin_bottom = 14.0561
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Other" type="TextureButton" parent="ItemInHome/Buttons"]
margin_left = 405.0
margin_top = -15.0
margin_right = 465.0
margin_bottom = 15.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ItemInBackpack/ItemDetail/Buttons/Drop" to="ItemInBackpack" method="_on_Drop_pressed"]
[connection signal="pressed" from="ItemInBackpack/ItemDetail/Buttons/MoveToHome" to="ItemInBackpack" method="_on_MoveToHome_pressed"]
[connection signal="DropItem" from="ItemInBackpack/ItemDetail/DropItemWindow" to="ItemInBackpack" method="_on_DropItemWindow_DropItem"]
[connection signal="QuitDropItem" from="ItemInBackpack/ItemDetail/DropItemWindow" to="ItemInBackpack" method="_on_DropItemWindow_QuitDropItem"]
[connection signal="pressed" from="ItemInBackpack/ItemDetail/DropWeaponWindow/OKbutton" to="ItemInBackpack" method="_on_DropWeapon_OK"]
[connection signal="pressed" from="ItemInBackpack/ItemDetail/DropWeaponWindow/QuitButton" to="ItemInBackpack" method="_on_DropWeapon_Quit"]
[connection signal="DropItem" from="ItemInBackpack/ItemDetail/AccessItemWindow" to="ItemInBackpack" method="_on_AccessItemWindow_OK"]
[connection signal="QuitDropItem" from="ItemInBackpack/ItemDetail/AccessItemWindow" to="ItemInBackpack" method="_on_AccessItemWindow_QuitDropItem"]
[connection signal="pressed" from="ItemInBackpack/Buttons/All" to="ItemInBackpack" method="_on_All_pressed"]
[connection signal="pressed" from="ItemInBackpack/Buttons/Weapon" to="ItemInBackpack" method="_on_Weapon_pressed"]
[connection signal="pressed" from="ItemInBackpack/Buttons/Medicine" to="ItemInBackpack" method="_on_Medicine_pressed"]
[connection signal="pressed" from="ItemInBackpack/Buttons/Bullet" to="ItemInBackpack" method="_on_Bullet_pressed"]
[connection signal="pressed" from="ItemInBackpack/Buttons/Resource" to="ItemInBackpack" method="_on_Resource_pressed"]
[connection signal="pressed" from="ItemInBackpack/Buttons/Other" to="ItemInBackpack" method="_on_Other_pressed"]
[connection signal="pressed" from="ItemInHome/ItemDetail/Buttons/Drop" to="ItemInHome" method="_on_Drop_pressed"]
[connection signal="pressed" from="ItemInHome/ItemDetail/Buttons/MoveToBackpack" to="ItemInHome" method="_on_MoveToBackpack_pressed"]
[connection signal="DropItem" from="ItemInHome/ItemDetail/DropItemWindow" to="ItemInHome" method="_on_DropItemWindow_DropItem"]
[connection signal="QuitDropItem" from="ItemInHome/ItemDetail/DropItemWindow" to="ItemInHome" method="_on_DropItemWindow_QuitDropItem"]
[connection signal="pressed" from="ItemInHome/ItemDetail/DropWeaponWindow/OKbutton" to="ItemInHome" method="_on_DropWeapon_OK"]
[connection signal="pressed" from="ItemInHome/ItemDetail/DropWeaponWindow/QuitButton" to="ItemInHome" method="_on_DropWeapon_Quit"]
[connection signal="DropItem" from="ItemInHome/ItemDetail/AccessItemWindow" to="ItemInHome" method="_on_AccessItemWindow_OK"]
[connection signal="QuitDropItem" from="ItemInHome/ItemDetail/AccessItemWindow" to="ItemInHome" method="_on_AccessItemWindow_QuitDropItem"]
[connection signal="pressed" from="ItemInHome/Buttons/All" to="ItemInHome" method="_on_All_pressed"]
[connection signal="pressed" from="ItemInHome/Buttons/Weapon" to="ItemInHome" method="_on_Weapon_pressed"]
[connection signal="pressed" from="ItemInHome/Buttons/Medicine" to="ItemInHome" method="_on_Medicine_pressed"]
[connection signal="pressed" from="ItemInHome/Buttons/Bullet" to="ItemInHome" method="_on_Bullet_pressed"]
[connection signal="pressed" from="ItemInHome/Buttons/Resource" to="ItemInHome" method="_on_Resource_pressed"]
[connection signal="pressed" from="ItemInHome/Buttons/Other" to="ItemInHome" method="_on_Other_pressed"]

[editable path="ItemInBackpack/ItemDetail/DropItemWindow"]
[editable path="ItemInBackpack/ItemDetail/AccessItemWindow"]
[editable path="ItemInHome/ItemDetail/AccessItemWindow"]
